--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Создание блога на Evolution CMS 3
+description: Как создать крутой блог на Evo CMS за полчаса (тут работы на полчаса).
 theme: just-the-docs
 
 url: https://aharito.github.io/just-the-docs
