--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
-title: Создание блога на Evolution CMS 3
-description: Как создать крутой блог на Evo CMS за полчаса (тут работы на полчаса).
+# title: Создание блога на Evolution CMS 3
+title: Blog on Evolution CMS 3
+# description: Как создать крутой блог на Evo CMS за полчаса (тут работы на полчаса).
+description: flkgjvldknb
 baseurl: "/just-the-docs"
 theme: just-the-docs
 
