--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,20 @@ repository: aharito/just-the-docs # for github-metadata
 
 aux_links:
   # Template Repository: https://github.com/just-the-docs/just-the-docs-template
+
+# External navigation links
+nav_external_links: false
+
+# Back to top link
+back_to_top: true
+back_to_top_text: "Back to top"
+
+footer_content: false
+
+# Footer "Edit this page on GitHub" link text
+gh_edit_link: true # show or hide edit this page link
+gh_edit_link_text: "Edit this page on GitHub"
+gh_edit_repository: "https://github.com/aharito/just-the-docs" # the github URL for your repo
+gh_edit_branch: "main" # the branch that your docs is served from
+# gh_edit_source: docs # the source that your files originate from
+gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
