--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ nav_external_links: false
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: false
+footer_content: "Copyright &copy; тут наш контент"
 
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
