--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,7 @@ theme: just-the-docs
 url: https://aharito.github.io
 repository: aharito/just-the-docs # for github-metadata
 
-aux_links:
-  # Template Repository: https://github.com/just-the-docs/just-the-docs-template
+aux_links: false
 
 # External navigation links
 nav_external_links: false
@@ -16,7 +15,7 @@ nav_external_links: false
 back_to_top: true
 back_to_top_text: "Back to top"
 
-footer_content: "Copyright &copy; тут наш контент"
+footer_content: "Copyright &copy; <a href=\"https://t.me/remote_adm\">Андрей Казунин</a>, адаптация для Jekyll <a href=\"https://t.me/remote_adm\">Андрей Харитонов</a>"
 
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
