--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ nav_external_links: false
 back_to_top: true
 back_to_top_text: "↑ Back to top"
 
-footer_content: "Copyright &copy; <a href=\"https://t.me/remote_adm\">Андрей Казунин</a>, адаптация для Jekyll <a href=\"https://t.me/remote_adm\">Андрей Харитонов</a>"
+footer_content: "Copyright &copy; <a href=\"https://t.me/remote_adm\">Андрей Казунин</a>, адаптация для Jekyll <a href=\"https://t.me/aharito\">Андрей Харитонов</a>"
 
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
