--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 title: Блог на Эво 3
 description: Как создать крутой блог на Evo CMS за полчаса (тут работы на полчаса).
-baseurl: "/just-the-docs" # repo folder
+baseurl: "/evo3-blog-lessons" # repo folder
 theme: just-the-docs
 
 # @NOTE @aharito это уже моё
 posts_dir: /docs
 
 url: https://aharito.github.io
-repository: aharito/just-the-docs # for github-metadata
+repository: aharito/evo3-blog-lessons # for github-metadata
 
 aux_links: false
 
@@ -23,7 +23,7 @@ footer_content: "Copyright &copy; <a href=\"https://t.me/remote_adm\">Андре
 # Footer "Edit this page on GitHub" link text
 gh_edit_link: true # show or hide edit this page link
 gh_edit_link_text: "Edit this page on GitHub"
-gh_edit_repository: "https://github.com/aharito/just-the-docs" # the github URL for your repo
+gh_edit_repository: "https://github.com/aharito/evo3-blog-lessons" # the github URL for your repo
 gh_edit_branch: "main" # the branch that your docs is served from
 # gh_edit_source: docs # the source that your files originate from
 gh_edit_view_mode: "tree" # "tree" or "edit" if you want the user to jump into the editor immediately
