--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,19 @@
+# Welcome to Jekyll!
+#
+# This config file is meant for settings that affect your whole site, values
+# which you are expected to set up once and rarely edit after that. If you find
+# yourself editing these this file very often, consider using Jekyll's data files
+# feature for the data you need to update frequently.
+#
+# For technical reasons, this file is *NOT* reloaded automatically when you use
+# 'jekyll serve'. If you change this file, please restart the server process.
+
+# Site settings
+# These are used to personalize your new site. If you look in the HTML files,
+# you will see them accessed via {{ site.title }}, {{ site.github_repo }}, and so on.
+# You can create any custom variable you would like, and they will be accessible
+# in the templates via {{ site.myvariable }}.
+
 title: Блог на Эво 3
 description: Как создать крутой блог на Evo CMS за полчаса (тут работы на полчаса).
 baseurl: "/evo3-blog-lessons" # repo folder
@@ -8,6 +24,8 @@ posts_dir: /docs
 
 url: https://aharito.github.io
 repository: aharito/evo3-blog-lessons # for github-metadata
+
+permalink: pretty
 
 aux_links: false
 
