--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ repository: aharito/evo3-blog-lessons # for github-metadata
 
 permalink: pretty
 
-search_languages: [ru, de]
+search_languages: ['ru', 'de']
 
 aux_links: false
 
