--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,9 @@
 # @NOTE @aharito это уже моё
 posts_dir: /docs
 
+# Set a path/url to a logo that will be displayed instead of the title
+# logo: "/assets/images/evo-cms-logo.png"
+
 title: Блог на Эво 3
 description: Как создать крутой блог на Evo CMS за полчаса (тут работы на полчаса).
 baseurl: "/evo3blog-jtd" # repo folder
