--- a/.github/workflows/pages.yml.example
+++ b/.github/workflows/pages.yml.example
@@ -1,4 +1,4 @@
-### @NOTE: @Aharito: This is ORIGINAL workflow started on changes in the project root.
+### @NOTE: @Aharito: This workflow started ONLY on changes in `docs` directory, rather than the project root.
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -10,11 +10,11 @@ name: Deploy Jekyll site to Pages
 
 on:
   push:
-    branches: ["main"]
-    #branches:
-      #- "main"
-    #paths:
-      #- "docs/**"
+    #branches: ["main"]
+    branches:
+      - "main"
+    paths:
+      - "docs/**"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -34,9 +34,9 @@ concurrency:
   # Build job
     build:
       runs-on: ubuntu-latest
-      #defaults:
-        #run:
-          #working-directory: docs
+      defaults:
+        run:
+          working-directory: docs
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -46,7 +46,7 @@ concurrency:
           ruby-version: '3.1' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
-          #working-directory: '${{ github.workspace }}/docs'
+          working-directory: '${{ github.workspace }}/docs'
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
@@ -58,8 +58,8 @@ concurrency:
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v1
-        #with:
-          #path: "docs/_site/"
+        with:
+          path: "docs/_site/"
 
   # Deployment job
   deploy:
